# phpqt6

./: .gitignore  CMakeLists.txt  README.md  composer.json  generate_stubs.php  php.ini  rebuild_and_stub.sh
include/: php_qt6.h
package/: Application.php  HBoxLayout.php  Label.php  LineEdit.php  MainWindow.php  PushButton.php  Slider.php  VBoxLayout.php  Widget.php  WidgetInterface.php
package/Exception/: ApplicationNotInitialized.php
src/: php_qt6.cpp  qapplication_binding.cpp  qcheckbox_binding.cpp  qcombobox_binding.cpp  qdialog_binding.cpp  qfiledialog_binding.cpp  qformlayout_binding.cpp  qgridlayout_binding.cpp  qhboxlayout_binding.cpp  qlabel_binding.cpp  qlayout_base_binding.cpp  qlineedit_binding.cpp  qlistwidget_binding.cpp  qmainwindow_binding.cpp  qmessagebox_binding.cpp  qobject_base_binding.cpp  qprogressbar_binding.cpp  qpushbutton_binding.cpp  qradiobutton_binding.cpp  qscrollarea_binding.cpp  qslider_binding.cpp  qspinbox_binding.cpp  qsplitter_binding.cpp  qtablewidget_binding.cpp  qtablewidgetitem_binding.cpp  qtabwidget_binding.cpp  qtextedit_binding.cpp  qtimer_binding.cpp  qvboxlayout_binding.cpp  qwidget_base_binding.cpp  qwidget_binding.cpp  stub_widgets.cpp
stubs/: qt6.stub.php
